# socha-client-test-2022

./: Cargo.toml
move_generator/: Cargo.toml
move_generator/src/: bitboard.rs  board.rs  ergebnisse.md  gamestate.rs  lib.rs  main.rs  moves.rs
src/: bitboard.rs  board.rs  game.rs  game_move.rs  game_result.rs  game_state.rs  gamestate.rs  main.rs  move.rs  nibble.rs  piece.rs  team.rs  vec2.rs  xml_node.rs
