[package]
name = "ostseeschach-client-softwarechallenge-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.22.0"
rand = "0.8.4"
thincollections = "0.5.0"

[profile.dev]
opt-level = 3
overflow-checks = true